# ros2_3d-nav

./: .gitignore  README.md  导航测试流程.md  迁移与二开整改清单.md
nav_tests/nav_test_20260606_094735/: events.csv  metadata.yaml  metrics.csv
nav_tests/nav_test_20260606_094735/bag/: metadata.yaml
src/: offline_filter_and_bag_mapping.md
src/FAST-LIVO2-ROS2/: .gitignore  CMakeLists.txt
src/FAST-LIVO2-ROS2/config/: mid360_lio_only.yaml  mid360_lio_relocalization.yaml
src/FAST-LIVO2-ROS2/include/: LIVMapper.h
src/FAST-LIVO2-ROS2/launch/: mapping_mid360_lio.launch.py
src/FAST-LIVO2-ROS2/rviz_cfg/: fast_livo2.rviz
src/FAST-LIVO2-ROS2/src/: LIVMapper.cpp  main.cpp
src/MK-mini-ros2/yhs_can_control/include/yhs_can_control/: yhs_can_control_node.hpp
src/MK-mini-ros2/yhs_can_control/params/: cfg.yaml
src/MK-mini-ros2/yhs_can_control/src/: yhs_can_control_node.cpp
src/Ros_Qt5_Gui_App/: CMakeLists.txt
src/Ros_Qt5_Gui_App/doc/: usage.md  usage_en.md
src/Ros_Qt5_Gui_App/src/app/: CMakeLists.txt
src/Ros_Qt5_Gui_App/src/app/display/: point_shape.cpp  point_shape.h
src/Ros_Qt5_Gui_App/src/app/display/manager/: scene_manager.cpp
src/Ros_Qt5_Gui_App/src/app/widgets/: nav_goal_table_view.cpp
src/Ros_Qt5_Gui_App/src/basic/: CMakeLists.txt
src/Ros_Qt5_Gui_App/src/basic/map/: occupancy_map.h
src/Ros_Qt5_Gui_App/src/channel/: CMakeLists.txt
src/Ros_Qt5_Gui_App/src/channel/ros1/: rosnode.cpp
src/Ros_Qt5_Gui_App/src/channel/ros2/: rclcomm.cpp
src/Ros_Qt5_Gui_App/src/channel/ros2/cmake/: GetTopologyMsg.cmake
src/Ros_Qt5_Gui_App/src/channel/rosbridge/: rosbridge_comm.cpp
src/agt_nav_console/: CMakeLists.txt  README.md  package.xml
src/agt_nav_console/config/: obstacle_stop.yaml  safety.yaml  topic_mapping.yaml
src/agt_nav_console/include/agt_nav_console/: agt_nav_console_node.hpp
src/agt_nav_console/launch/: obstacle_stop_demo.launch.py  safe_online_nav_demo.launch.py  safety_demo.launch.py
src/agt_nav_console/resource/: agt_nav_console
src/agt_nav_console/scripts/: analyze_nav_test  analyze_nav_test.py  build_ros_clean_env.sh  nav_ops_console  nav_ops_console.py  nav_test_recorder  nav_test_recorder.py  offline_nav_test_feeder  offline_nav_test_feeder.py  start_qt_gui.sh
src/agt_nav_console/src/: agt_nav_console_node.cpp  obstacle_stop_node.cpp  safety_guard_node.cpp
src/jie_3d_nav/: .gitignore  GUI离线测试.md  README.md  常用命令.md
src/jie_3d_nav/jie_octomap/launch/: import_pcd_map.launch.py
src/jie_3d_nav/jie_octomap/rviz/: mid360_localization.rviz
src/jie_3d_nav/octo_planner/: CMakeLists.txt  package.xml
src/jie_3d_nav/octo_planner/config/: lidar_localization_mid360_fastlivo.yaml  mid360_livox_config.json  nav2_mid360_params.yaml
src/jie_3d_nav/octo_planner/launch/: mid360_driver.launch.py  mid360_relocalization.launch.py  my_robot_nav.launch.py  nav2_mid360.launch.py
src/jie_3d_nav/octo_planner/maps/: syswaiwei.yaml
src/jie_3d_nav/octo_planner/src/: cmd_vel_to_ctrl_cmd_bridge.cpp
src/lidar_localization_ros2/launch/: mid360_legged_localization.launch.py
src/map/: syswaiwei.yaml
src/mid360_nav_demo/: CMakeLists.txt  README.md  package.xml
src/mid360_nav_demo/config/: icp_relocalizer.yaml  mid360_lio_sim_custom.yaml  mid360_lio_sim_relocalization.yaml  octomap_mapping.yaml
src/mid360_nav_demo/launch/: icp_relocalizer.launch.py  octomap_mapping.launch.py  octomap_tuning_gui.launch.py  online_mapping_demo.launch.py  online_nav_demo.launch.py  save_projected_map.launch.py  sim_drive_gui.launch.py  sim_mapping_demo.launch.py  sim_relocalization_demo.launch.py
src/mid360_nav_demo/maps/: sim_test.pgm  sim_test.yaml  site1(jiu).pgm  site1(jiu).yaml  site1.pgm  site1.topology  site1.yaml  tuned_map.pgm  tuned_map.yaml
src/mid360_nav_demo/rviz/: mid360_online_mapping.rviz  mid360_sim_mapping.rviz  mid360_sim_relocalization.rviz
src/mid360_nav_demo/scripts/: octomap_tuning_gui.py  sim_drive_gui.py
src/mid360_nav_demo/src/: icp_relocalizer_node.cpp
src/rpg_vikit_ros2_fisheye/vikit_common/: CMakeLists.txt
