<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agt_nav_console</name>
  <version>0.1.0</version>
  <description>Navigation console package for GUI operations, safe speed arbitration, emergency stop, and waypoint bridging.</description>
  <maintainer email="yangxuan@example.com">yangxuan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>fast_livo</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mid360_nav_demo</exec_depend>
  <exec_depend>octo_planner</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>yhs_can_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
